feat: top tab svgs
Fixes #1968

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -53,15 +53,17 @@
           <div class='left-tab-stripe-button left-tab-stripe-button-selected' data-tab-button-index='1'>
             <i class='fas fa-square repl-prompt-right-element-icon deemphasize'></i>
             <div class='left-tab-stripe-button-label'>&nbsp;</div>
-            <div class='left-tab-stripe-button-closer'>&#xd7;</div>
+            <div class='left-tab-stripe-button-closer'>
+              <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M12 4.7l-.7-.7L8 7.3 4.7 4l-.7.7L7.3 8 4 11.3l.7.7L8 8.7l3.3 3.3.7-.7L8.7 8z"></path></svg>
+            </div>
           </div>
         </div>
         <div class='left-tab-stripe-bottom-buttons'>
           <div class='left-tab-stripe-button smaller-button' id='new-tab-button' data-balloon-disabled='Open a new tab' data-balloon-pos='right' data-balloon-length='fit'>
-            <i class='repl-prompt-right-element-icon deemphasize new-tab-button'>&#xFF0B;</i>
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" aria-hidden="true"><path d="M8.5 7.5V3h-1v4.5H3v1h4.5V13h1V8.5H13v-1z"></path></svg>
           </div>
           <div class='left-tab-stripe-button smaller-button' id='help-button'>
-            <i class='fas fa-question'></i>
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm0 23a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 25zm1.14-7.75v2.5h-2.25V15H17a2.38 2.38 0 0 0 0-4.75h-1.5a2.38 2.38 0 0 0-2.38 2.37v.64h-2.23v-.64A4.63 4.63 0 0 1 15.52 8H17a4.63 4.63 0 0 1 .12 9.25z"></path></svg>
           </div>
         </div>
       </div>
