--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -9,7 +9,7 @@ body[kui-theme="Dark"] {
     --color-base03: #373D42; 
     --color-base04: #565656; /* Dark Foreground (Used for status bars) */
     --color-base05: #9FA5AD; /* Default Foreground, Caret, Delimiters, Operators */
-    --color-base06: #FFFFFF; /* Light Foreground (Not often used) */
+    --color-base06: #F2F4F8; /* Light Foreground (Not often used) */
     --color-base07: #ffffff; /* Light Background (Not often used) */
     --color-base08: #FB4B53; /* RED: Variables, XML Tags, Markup Link Text, Markup Lists, Diff Deleted */
     --color-base09: #de935f; /* ORANGE: Integers, Boolean, Constants, XML Attributes, Markup Link Url */
@@ -28,7 +28,7 @@ body[kui-theme="Dark"] {
     --color-tag-beta-fill: #202529;
     --color-tag-beta-text: var(--color-text-01);
 
-    --color-text-02: #7C8188;
+    --color-text-02: #A4A4A4;
 
     /* table header row */
     --color-ui-06: #373D42;
