fix(packages/app): use svg for sidecar back button
Fixes #1998

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -183,7 +183,9 @@
             <div class='sidecar-bottom-stripe-back-bits sidecar-bottom-stripe-button-container'>
               <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-back-button'
                    data-balloon-pos='down-left'>
-                <div class='graphical-icon'><i class='fas fa-arrow-left'></i></div>
+                <div class='graphical-icon'>
+                  <svg focusable="false" preserveAspectRatio="xMidYMid meet" style="will-change: transform;" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 32 32" aria-hidden="true"><path d="M13 26l1.41-1.41L6.83 17H29v-2H6.83l7.58-7.59L13 6 3 16l10 10z"></path></svg>
+                </div>
                 <div class='sidecar-bottom-stripe-back-inner-bits'></div>
               </div>
             </div> <!-- back button -->
