--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -371,19 +371,24 @@ repl .repl-block.using-custom-prompt .repl-input input {
     transition: all 300ms ease-in-out;
 }
 .repl-block.processing .repl-prompt-right-element-icon {
-    color: var(--color-processing);
+    background-color: var(--color-processing);
 }
 .repl-prompt-right-elements .repl-prompt-right-element-icon:hover {
     cursor: pointer;
     opacity: 1;
 }
+.repl-prompt-right-element-icon {
+    width: 0.75em;
+    height: 0.75em;
+    border-radius: 1px / 2px;
+}
 .repl-block.valid-response .repl-prompt-right-element-icon {
     display: block;
-    color: var(--color-ok);
+    background-color: var(--color-ok);
 }
 .repl-block.error .repl-prompt-right-element-icon {
     display: block;
-    color: var(--color-error);
+    background-color: var(--color-error);
 }
 repl.sidecar-visible .repl-block:not(.processing) .repl-prompt-right-elements, .repl-active .repl-prompt-right-elements {
     display: none; /* see the comment for repl-input re: min-height */
@@ -2130,6 +2135,9 @@ body.subwindow .sidecar-full-screen sidecar:not(.minimized) .sidecar-bottom-stri
     fill: var(--color-text-against-dark-bg);
     transition: fill 150ms ease-in-out;
 }
+.graphical-icon:hover svg path {
+    fill: var(--color-brand-01);
+}
 
 /* pulse animation for repl.partial */
 input.repl-partial, .alert-pulse {
@@ -2345,14 +2353,19 @@ body[kui-theme-style="dark"] [data-balloon][data-balloon-pos='right']:before {
     align-items: center;
     justify-content: center;
     font-size: 1.25em;
-    color: var(--color-ui-05);
 }
-.list-paginator .list-paginator-button.list-paginator-button-disabled {
-    color: var(--color-ui-04);
+.list-paginator .list-paginator-button svg path {
+    fill: var(--color-text-02);
+    transition: fill 150ms ease-in-out;
+}
+.list-paginator .list-paginator-button.list-paginator-button-disabled svg path {
+    fill: var(--color-ui-04);
 }
 .list-paginator .list-paginator-button:not(.list-paginator-button-disabled):hover {
-    color: var(--color-brand-01);
     cursor: pointer;
+}
+.list-paginator .list-paginator-button:not(.list-paginator-button-disabled):hover svg path {
+    fill: var(--color-brand-01);
 }
 
 .wrap-normal {
