--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -232,6 +232,8 @@ body:not(.subwindow) repl.sidecar-visible .repl-block, .sidecar-full-screen repl
 }
 .header-cell {
     background-color: var(--color-ui-06);
+    text-transform: capitalize;
+    letter-spacing: 0.32px;
 }
 .header-cell:not(:first-child) {
     border-left: 1px inset var(--color-base04);
@@ -398,7 +400,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
     margin: 0 !important;
 }
 .repl-result, .repl-input input, .repl-input-like {
-    font-size: 0.875em;
+    font-size: 0.75em;
 }
 .repl-input input, .repl-input-like {
     color: var(--color-text-01);
@@ -549,7 +551,7 @@ body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.
     display: table-cell;
     vertical-align: middle;
     padding: 0.6875em;
-    border-top: 1px solid var(--color-ui-04);
+    border-bottom: 1px solid var(--color-ui-04);
     transition: all 300ms ease-in-out;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -770,8 +772,8 @@ body:not(.subwindow) .sidecar-full-screen sidecar.visible:not(.minimized) {
 }
 
 .sidecar-bottom-stripe {
-    flex-basis: 2.25em;
-    min-height: 2.25rem; /* important for screenshot, which tries to maximally squish the sidecar height */
+    flex-basis: 2em;
+    min-height: 2rem; /* important for screenshot, which tries to maximally squish the sidecar height */
     display: flex;
     z-index: 5;
     background-color: var(--color-stripe-02);
@@ -887,8 +889,8 @@ sidecar .custom-content {
 sidecar .sidecar-header {
     display: flex;
     background-color: var(--color-sidecar-header);
-    flex-basis: 9rem;
-    min-height:  9rem; /* see shell issue #712 */
+    flex-basis: 7rem;
+    min-height:  7rem; /* see shell issue #712 */
     transition: background-color 300ms ease-in-out, border-color 300ms ease-in-out;
 }
 sidecar ul.bx--tabs__nav.bx--tabs__nav--hidden:empty {
@@ -962,7 +964,7 @@ sidecar .header-left-bits {
     align-items: stretch;
 }
 sidecar .sidecar-header-icon {
-    font-size: 0.875rem;
+    font-size: 0.75em;
     font-weight: 400;
     letter-spacing: 1px;
     pointer-events: none; /* with text rotation, this element bumps into neighbors, otherwise obfuscating mouse events */
@@ -970,7 +972,7 @@ sidecar .sidecar-header-icon {
 sidecar .sidecar-header-name {
     flex: 1;
     font-weight: 400;
-    font-size: 2.75em;
+    font-size: 1.75em;
     display: flex;
     align-items: center;
     margin: 1rem 0 0;
@@ -2363,7 +2365,6 @@ sidecar.minimized {
     flex: 0 0 calc(0.375rem * 2 + 0.75rem); /* designed to match the ? in the header */
     align-items: stretch;
     opacity: 0.9;
-    font-size: 0.875em;
 }
 sidecar.minimized header.sidecar-header {
     display: none;
