--- a/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
+++ b/packages/kui-builder/examples/build-configs/default/theme/css/themes/dark.css
@@ -15,8 +15,8 @@ body[kui-theme="Dark"] {
     --color-base09: #de935f; /* ORANGE: Integers, Boolean, Constants, XML Attributes, Markup Link Url */
     --color-base0A: #FDD13A; /* YELLOW: Classes, Markup Bold, Search Text Background */
     --color-base0B: #3DBB61; /* GREEN: Strings, Inherited Class, Markup Code, Diff Inserted */
-    --color-base0C: #1999b3; /* CYAN: Support, Regular Expressions, Escape Characters, Markup Quotes */
-    --color-base0D: #6CCAFF; /* BLUE: Functions, Methods, Attribute IDs, Headings */
+    --color-base0C: #6CCAFF; /* CYAN: Support, Regular Expressions, Escape Characters, Markup Quotes */
+    --color-base0D: #1999b3; /* BLUE: Functions, Methods, Attribute IDs, Headings */
     --color-base0E: #b294bb; /* MAGENTA: Keywords, Storage, Selector, Markup Italic, Diff Changed */
     --color-base0F: #a3685a; /* BROWN: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */
 
@@ -24,6 +24,7 @@ body[kui-theme="Dark"] {
     --color-light-green: hsla(134, 43%, 52%, 50%);
     --color-light-yellow: hsla(46, 98%, 61%, 50%);
 
+    --color-content-divider: #418CFF;
     --color-sidecar-header: var(--color-base03);
     --color-tag-beta-fill: #202529;
     --color-tag-beta-text: var(--color-text-01);
@@ -32,6 +33,10 @@ body[kui-theme="Dark"] {
 
     /* table header row */
     --color-ui-06: #373D42;
+}
+
+.header-cell {
+    color: #D8DCE3
 }
 
 /* tomorrow-night hightlightjs theme */
